Large refactor to use the new Reference type for loaded versus unloaded